# RayTracer

./: .gitignore  CMakeLists.txt  main.cpp  perspective.ppm
Display/: Camera.cpp  Camera.h  Image.cpp  Image.h  OrthographicCam.cpp  OrthographicCam.h  PerspectiveCam.cpp  PerspectiveCam.h  Renderer.cpp  Renderer.h  lightIntensity.cpp  lightIntensity.h
Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h
Math/: mat3x3.cpp  mat3x3.h  mat4x4.cpp  mat4x4.h  plane.cpp  plane.h  primitive.h  ray.cpp  ray.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  vec3.cpp  vec3.h
Utils/: objectParser.cpp  objectParser.h  perspective.ppm
